recipes/bitnami/redis/25.5.3/CATALOG.md
<!-- Generated by npm run catalog:maps. Do not edit by hand. -->

# bitnami/redis 25.5.3 Catalog Map

This page makes the artifact chain explicit:

```text
chart -> recipe -> variants -> variant revisions -> package bases -> receipts
```

## Status

| Field | Value |
| --- | --- |
| Chart | bitnami/redis@25.5.3 |
| Catalog status | catalog-supported |
| Support level | supported-for-declared-scopes |
| Supported scopes | local-test |
| Production readiness | production-review-ready |
| Supported variants | default, reuse-existing-secret |
| Candidate variants | none |
| Control points | capability-profile, dependency-lock, generated-facts, hook-policy, image-digest, installer-support-object, secret-handling, source-lock, target-facts |

## Feature And Proof Summary

This is the chart-level summary. Use the variant table and receipt links below
for exact base-variant evidence.

| Field | Value |
| --- | --- |
| Adoption bucket | try-from-public-catalog |
| User status | catalog-supported-with-live-evidence |
| Strongest evidence | live-helm-vs-confighub-parity |
| Proof lanes | render parity 2/2; ConfigHub 2/2; local live 2/2; GitOps live 2/2; live parity 2/2 |
| Feature summary | generated-secrets;required-values;install-vs-upgrade;remote-dependencies |
| Hard gap | - |
| Next action | choose whether default is in production scope; close or document its render-only live-readiness issue first |

## Artifact Chain

| Stage | Artifact |
| --- | --- |
| Source chart lock | [recipes/bitnami/redis/25.5.3/source-lock.yaml](source-lock.yaml) |
| Dependency lock | [recipes/bitnami/redis/25.5.3/dependency-lock.yaml](dependency-lock.yaml) |
| Recipe | [recipes/bitnami/redis/25.5.3/recipe.yaml](recipe.yaml) |
| Helm plan | [recipes/bitnami/redis/25.5.3/helm-plan.yaml](helm-plan.yaml) |
| Chart dossier | [recipes/bitnami/redis/25.5.3/chart-dossier.yaml](chart-dossier.yaml) |
| Control points | [recipes/bitnami/redis/25.5.3/control-points.yaml](control-points.yaml) |
| Value model | [recipes/bitnami/redis/25.5.3/value-model.yaml](value-model.yaml) |
| Value source map | [recipes/bitnami/redis/25.5.3/value-source-map.yaml](value-source-map.yaml) |
| Weirdness and mitigations | [recipes/bitnami/redis/25.5.3/weirdness-and-mitigations.md](weirdness-and-mitigations.md) |
| Catalog status | [recipes/bitnami/redis/25.5.3/catalog-status.yaml](catalog-status.yaml) |
| Helm pain report | [recipes/bitnami/redis/25.5.3/helm-pain-report.yaml](helm-pain-report.yaml) |
| Installer package OCI | `oci://europe-west1-docker.pkg.dev/nth-fort-499605-q5/helm-expt/bitnami-redis:25.5.3@sha256:7ad5fa6de0aa9c29df8cd26650893ebae6ad149a7c5ac33a8beedf5b02e2ac33` |
| Installer package source | [packages/bitnami/redis/25.5.3](../../../../packages/bitnami/redis/25.5.3) |
| Installer package receipt | [recipes/bitnami/redis/25.5.3/publication/installer-package-receipt.yaml](publication/installer-package-receipt.yaml) |
| Machine index | [recipes/bitnami/redis/25.5.3/artifact-index.yaml](artifact-index.yaml) |

## Variants

| Variant | Variant file | Package base | Revision | Helm objects | cub installer objects | Match | Helm equivalence | Scan | Gate | Target facts |
| --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- |
| default | [recipes/bitnami/redis/25.5.3/variants/default/variant.yaml](variants/default/variant.yaml) | [packages/bitnami/redis/25.5.3/bases/default](../../../../packages/bitnami/redis/25.5.3/bases/default) | [recipes/bitnami/redis/25.5.3/revisions/default/r001/variant-revision.yaml](revisions/default/r001/variant-revision.yaml) | 14 | 15 | 14/14 | pass | warn | warn | none |
| reuse-existing-secret | [recipes/bitnami/redis/25.5.3/variants/reuse-existing-secret/variant.yaml](variants/reuse-existing-secret/variant.yaml) | [packages/bitnami/redis/25.5.3/bases/reuse-existing-secret](../../../../packages/bitnami/redis/25.5.3/bases/reuse-existing-secret) | [recipes/bitnami/redis/25.5.3/revisions/reuse-existing-secret/r001/variant-revision.yaml](revisions/reuse-existing-secret/r001/variant-revision.yaml) | 13 | 14 | 13/13 | pass | warn | warn | required Secret redis/redis-existing-secret keys redis-password |

## Package Bases

| Base | Path | Default | Description |
| --- | --- | --- | --- |
| default | [packages/bitnami/redis/25.5.3/bases/default](../../../../packages/bitnami/redis/25.5.3/bases/default) | no | Redis static password demo variant rendered from bitnami/redis@25.5.3 |
| reuse-existing-secret | [packages/bitnami/redis/25.5.3/bases/reuse-existing-secret](../../../../packages/bitnami/redis/25.5.3/bases/reuse-existing-secret) | yes | Redis existing Secret default variant rendered from bitnami/redis@25.5.3 |

## Receipts

| Variant | Revision | Receipt | Kind | Result | Path |
| --- | --- | --- | --- | --- | --- |
| default | r001 | render | RenderReceipt | recorded | [recipes/bitnami/redis/25.5.3/revisions/default/r001/receipts/render-receipt.yaml](revisions/default/r001/receipts/render-receipt.yaml) |
| default | r001 | helmEquivalence | HelmEquivalenceReceipt | pass | [recipes/bitnami/redis/25.5.3/revisions/default/r001/receipts/helm-equivalence-receipt.yaml](revisions/default/r001/receipts/helm-equivalence-receipt.yaml) |
| default | r001 | scan | ScanReceipt | warn | [recipes/bitnami/redis/25.5.3/revisions/default/r001/receipts/scan-receipt.yaml](revisions/default/r001/receipts/scan-receipt.yaml) |
| default | r001 | installGate | InstallGate | warn | [recipes/bitnami/redis/25.5.3/revisions/default/r001/receipts/install-gate.yaml](revisions/default/r001/receipts/install-gate.yaml) |
| reuse-existing-secret | r001 | render | RenderReceipt | recorded | [recipes/bitnami/redis/25.5.3/revisions/reuse-existing-secret/r001/receipts/render-receipt.yaml](revisions/reuse-existing-secret/r001/receipts/render-receipt.yaml) |
| reuse-existing-secret | r001 | helmEquivalence | HelmEquivalenceReceipt | pass | [recipes/bitnami/redis/25.5.3/revisions/reuse-existing-secret/r001/receipts/helm-equivalence-receipt.yaml](revisions/reuse-existing-secret/r001/receipts/helm-equivalence-receipt.yaml) |
| reuse-existing-secret | r001 | scan | ScanReceipt | warn | [recipes/bitnami/redis/25.5.3/revisions/reuse-existing-secret/r001/receipts/scan-receipt.yaml](revisions/reuse-existing-secret/r001/receipts/scan-receipt.yaml) |
| reuse-existing-secret | r001 | installGate | InstallGate | warn | [recipes/bitnami/redis/25.5.3/revisions/reuse-existing-secret/r001/receipts/install-gate.yaml](revisions/reuse-existing-secret/r001/receipts/install-gate.yaml) |

## Current Install Shape

```sh
cub installer setup --pull oci://europe-west1-docker.pkg.dev/nth-fort-499605-q5/helm-expt/bitnami-redis:25.5.3@sha256:7ad5fa6de0aa9c29df8cd26650893ebae6ad149a7c5ac33a8beedf5b02e2ac33 --base <variant> --work-dir <tmp> --non-interactive --namespace <namespace>
```

Use the variant table above to choose the package base. The `oci://` ref is
the public package users pull; the `packages/...` path is the repo source path
used by maintainers and proof scripts. The proof path compares regular Helm
output with real `cub installer setup` output and explains every intentional
difference, such as the Namespace support object or separated Secrets.
