recipes/bitnami/redis/27.0.0/CATALOG.md
<!-- Generated by npm run catalog:maps. Do not edit by hand. -->

# bitnami/redis 27.0.0 Catalog Map

This page makes the artifact chain explicit:

```text
chart -> recipe -> variants -> variant revisions -> package bases -> receipts
```

## Status

| Field | Value |
| --- | --- |
| Chart | bitnami/redis@27.0.0 |
| Catalog status | catalog-candidate |
| Support level | promotion-review-needed |
| Supported scopes | none |
| Production readiness | not-reviewed-for-production |
| Supported variants | none |
| Candidate variants | default, reuse-existing-secret |
| Control points | capability-profile, dependency-lock, generated-facts, hook-policy, image-digest, installer-support-object, secret-handling, source-lock, target-facts |

## Feature And Proof Summary

This is the chart-level summary. Use the variant table and receipt links below
for exact base-variant evidence.

| Field | Value |
| --- | --- |
| Adoption bucket | - |
| User status | - |
| Strongest evidence | - |
| Proof lanes | render parity 2/2; ConfigHub 2/2; local live 2/2; GitOps live 2/2; live parity 2/2 |
| Feature summary | none-recorded |
| Hard gap | - |
| Next action | - |

## Artifact Chain

| Stage | Artifact |
| --- | --- |
| Source chart lock | [recipes/bitnami/redis/27.0.0/source-lock.yaml](source-lock.yaml) |
| Dependency lock | [recipes/bitnami/redis/27.0.0/dependency-lock.yaml](dependency-lock.yaml) |
| Recipe | [recipes/bitnami/redis/27.0.0/recipe.yaml](recipe.yaml) |
| Helm plan | [recipes/bitnami/redis/27.0.0/helm-plan.yaml](helm-plan.yaml) |
| Chart dossier | [recipes/bitnami/redis/27.0.0/chart-dossier.yaml](chart-dossier.yaml) |
| Control points | [recipes/bitnami/redis/27.0.0/control-points.yaml](control-points.yaml) |
| Value model | [recipes/bitnami/redis/27.0.0/value-model.yaml](value-model.yaml) |
| Value source map | [recipes/bitnami/redis/27.0.0/value-source-map.yaml](value-source-map.yaml) |
| Catalog status | [recipes/bitnami/redis/27.0.0/catalog-status.yaml](catalog-status.yaml) |
| Helm pain report | [recipes/bitnami/redis/27.0.0/helm-pain-report.yaml](helm-pain-report.yaml) |
| Installer package OCI | `oci://europe-west1-docker.pkg.dev/nth-fort-499605-q5/helm-expt/bitnami-redis:27.0.0@sha256:d38f3fecadcc4c4cb26d9fb6c1fc58402c7dfa1cf08673afe7b00041c7614ae6` |
| Installer package source | [packages/bitnami/redis/27.0.0](../../../../packages/bitnami/redis/27.0.0) |
| Installer package receipt | [recipes/bitnami/redis/27.0.0/publication/installer-package-receipt.yaml](publication/installer-package-receipt.yaml) |
| Machine index | [recipes/bitnami/redis/27.0.0/artifact-index.yaml](artifact-index.yaml) |

## Variants

| Variant | Variant file | Package base | Revision | Helm objects | cub installer objects | Match | Helm equivalence | Scan | Gate | Target facts |
| --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- |
| default | [recipes/bitnami/redis/27.0.0/variants/default/variant.yaml](variants/default/variant.yaml) | [packages/bitnami/redis/27.0.0/bases/default](../../../../packages/bitnami/redis/27.0.0/bases/default) | [recipes/bitnami/redis/27.0.0/revisions/default/r001/variant-revision.yaml](revisions/default/r001/variant-revision.yaml) | 14 | 15 | 14/14 | pass | warn | warn | none |
| reuse-existing-secret | [recipes/bitnami/redis/27.0.0/variants/reuse-existing-secret/variant.yaml](variants/reuse-existing-secret/variant.yaml) | [packages/bitnami/redis/27.0.0/bases/reuse-existing-secret](../../../../packages/bitnami/redis/27.0.0/bases/reuse-existing-secret) | [recipes/bitnami/redis/27.0.0/revisions/reuse-existing-secret/r001/variant-revision.yaml](revisions/reuse-existing-secret/r001/variant-revision.yaml) | 13 | 14 | 13/13 | pass | warn | warn | required Secret redis/redis-existing-secret keys redis-password |

## Package Bases

| Base | Path | Default | Description |
| --- | --- | --- | --- |
| default | [packages/bitnami/redis/27.0.0/bases/default](../../../../packages/bitnami/redis/27.0.0/bases/default) | no | Redis static password demo variant rendered from bitnami/redis@27.0.0 |
| reuse-existing-secret | [packages/bitnami/redis/27.0.0/bases/reuse-existing-secret](../../../../packages/bitnami/redis/27.0.0/bases/reuse-existing-secret) | yes | Redis existing Secret default variant rendered from bitnami/redis@27.0.0 |

## Receipts

| Variant | Revision | Receipt | Kind | Result | Path |
| --- | --- | --- | --- | --- | --- |
| default | r001 | render | RenderReceipt | recorded | [recipes/bitnami/redis/27.0.0/revisions/default/r001/receipts/render-receipt.yaml](revisions/default/r001/receipts/render-receipt.yaml) |
| default | r001 | helmEquivalence | HelmEquivalenceReceipt | pass | [recipes/bitnami/redis/27.0.0/revisions/default/r001/receipts/helm-equivalence-receipt.yaml](revisions/default/r001/receipts/helm-equivalence-receipt.yaml) |
| default | r001 | scan | ScanReceipt | warn | [recipes/bitnami/redis/27.0.0/revisions/default/r001/receipts/scan-receipt.yaml](revisions/default/r001/receipts/scan-receipt.yaml) |
| default | r001 | installGate | InstallGate | warn | [recipes/bitnami/redis/27.0.0/revisions/default/r001/receipts/install-gate.yaml](revisions/default/r001/receipts/install-gate.yaml) |
| reuse-existing-secret | r001 | render | RenderReceipt | recorded | [recipes/bitnami/redis/27.0.0/revisions/reuse-existing-secret/r001/receipts/render-receipt.yaml](revisions/reuse-existing-secret/r001/receipts/render-receipt.yaml) |
| reuse-existing-secret | r001 | helmEquivalence | HelmEquivalenceReceipt | pass | [recipes/bitnami/redis/27.0.0/revisions/reuse-existing-secret/r001/receipts/helm-equivalence-receipt.yaml](revisions/reuse-existing-secret/r001/receipts/helm-equivalence-receipt.yaml) |
| reuse-existing-secret | r001 | scan | ScanReceipt | warn | [recipes/bitnami/redis/27.0.0/revisions/reuse-existing-secret/r001/receipts/scan-receipt.yaml](revisions/reuse-existing-secret/r001/receipts/scan-receipt.yaml) |
| reuse-existing-secret | r001 | installGate | InstallGate | warn | [recipes/bitnami/redis/27.0.0/revisions/reuse-existing-secret/r001/receipts/install-gate.yaml](revisions/reuse-existing-secret/r001/receipts/install-gate.yaml) |

## Current Install Shape

```sh
cub installer setup --pull oci://europe-west1-docker.pkg.dev/nth-fort-499605-q5/helm-expt/bitnami-redis:27.0.0@sha256:d38f3fecadcc4c4cb26d9fb6c1fc58402c7dfa1cf08673afe7b00041c7614ae6 --base <variant> --work-dir <tmp> --non-interactive --namespace <namespace>
```

Use the variant table above to choose the package base. The `oci://` ref is
the public package users pull; the `packages/...` path is the repo source path
used by maintainers and proof scripts. The proof path compares regular Helm
output with real `cub installer setup` output and explains every intentional
difference, such as the Namespace support object or separated Secrets.
